--- a/MyTrax/RegisterLogin/LoginVC/LoginCell/LoginCell.xib
+++ b/MyTrax/RegisterLogin/LoginVC/LoginCell/LoginCell.xib
@@ -31,7 +31,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="280" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Se4-f7-B5a">
                                 <rect key="frame" x="0.0" y="40" width="280" height="30"/>
