--- a/MyTrax/RegisterLogin/LoginVC/LoginVC.xib
+++ b/MyTrax/RegisterLogin/LoginVC/LoginVC.xib
@@ -22,18 +22,28 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hMq-Ug-NrZ">
-                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                    <rect key="frame" x="0.0" y="61" width="375" height="606"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GYQ-vM-USu">
+                    <rect key="frame" x="15" y="20" width="48" height="30"/>
+                    <state key="normal" title="Cancel"/>
+                    <connections>
+                        <action selector="cancelLogoinButtonAction:" destination="-1" eventType="touchUpInside" id="kfb-Sk-9qA"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="hMq-Ug-NrZ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="7Me-jg-SL2"/>
+                <constraint firstItem="hMq-Ug-NrZ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="41" id="7Me-jg-SL2"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="hMq-Ug-NrZ" secondAttribute="bottom" id="GoZ-DV-fMB"/>
+                <constraint firstItem="GYQ-vM-USu" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Mym-ey-ddS"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="hMq-Ug-NrZ" secondAttribute="trailing" id="NND-Mo-ofv"/>
+                <constraint firstItem="GYQ-vM-USu" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="15" id="OpT-6o-hyL"/>
                 <constraint firstItem="hMq-Ug-NrZ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Rax-6R-kPL"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="25.5" y="51.5"/>
         </view>
     </objects>
 </document>
