--- a/GoMoto/PostsFeedVC/PostCell/PostCell.xib
+++ b/GoMoto/PostsFeedVC/PostCell/PostCell.xib
@@ -10,38 +10,121 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="HelveticaNeueLights.ttc">
-            <string>HelveticaNeue-Light</string>
+        <array key="AvenirNext.ttc">
+            <string>AvenirNext-Bold</string>
+            <string>AvenirNext-Medium</string>
         </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="PostCell" customModule="GoMoto" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="472" id="KGk-i7-Jjw" customClass="PostCell" customModule="GoMoto" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="472"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="471.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ner-6H-dry">
-                        <rect key="frame" x="10" y="12.5" width="300" height="20"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rfi-HW-3xa">
+                        <rect key="frame" x="0.0" y="0.0" width="270" height="80"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="80" id="j0w-f2-Fui"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="252" text="Track Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T7L-Gm-eRF">
+                        <rect key="frame" x="15" y="88" width="147.5" height="23.5"/>
+                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12/02/2018 - 2:36PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TYI-dT-w6A">
+                        <rect key="frame" x="170.5" y="88" width="99.5" height="14"/>
+                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="10"/>
+                        <color key="textColor" red="0.46633090101522845" green="0.46633090101522845" blue="0.46633090101522845" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="rEs-X4-ljP">
+                        <rect key="frame" x="270" y="0.0" width="50" height="413"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Cu-W2-7QR">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="131"/>
+                                <color key="backgroundColor" red="0.88249653577804565" green="0.86060410737991333" blue="0.98434180021286011" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" image="riderProfileTabBar"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AYI-HH-ZDO">
+                                <rect key="frame" x="0.0" y="141" width="50" height="131"/>
+                                <color key="backgroundColor" red="0.88249653577804565" green="0.86060410737991333" blue="0.98434180021286011" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" image="riderProfileTabBar"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9KF-ry-9WF">
+                                <rect key="frame" x="0.0" y="282" width="50" height="131"/>
+                                <color key="backgroundColor" red="0.88249653577804565" green="0.86060410737991333" blue="0.98434180021286011" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" image="riderProfileTabBar"/>
+                            </button>
+                        </subviews>
+                    </stackView>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="253" verticalCompressionResistancePriority="749" scrollEnabled="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nwN-uD-d4K">
+                        <rect key="frame" x="15" y="118.5" width="255" height="256.5"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                    </textView>
+                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="krD-9T-4AC">
+                        <rect key="frame" x="15" y="426" width="289" height="0.0"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="sectionIndexBackgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="0.47137200342465752" colorSpace="custom" customColorSpace="sRGB"/>
+                    </tableView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xYF-Y2-oS9">
+                        <rect key="frame" x="200" y="383" width="70" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="70" id="9Nz-pa-jjy"/>
+                            <constraint firstAttribute="height" constant="30" id="iHU-bR-Sm4"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <state key="normal" title="Comments"/>
+                        <connections>
+                            <action selector="commentsButtonAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="WoP-34-WZZ"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="ner-6H-dry" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="CNB-dv-bsN"/>
-                    <constraint firstItem="ner-6H-dry" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="LeJ-zg-D5f"/>
-                    <constraint firstAttribute="trailing" secondItem="ner-6H-dry" secondAttribute="trailing" constant="10" id="OrO-Ai-pOq"/>
-                    <constraint firstItem="ner-6H-dry" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="PRF-E3-71h"/>
+                    <constraint firstItem="krD-9T-4AC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="0g9-xK-YcL"/>
+                    <constraint firstItem="rEs-X4-ljP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="1nN-1M-gPg"/>
+                    <constraint firstAttribute="bottom" secondItem="krD-9T-4AC" secondAttribute="bottom" constant="45.5" id="986-eb-9du"/>
+                    <constraint firstAttribute="trailing" secondItem="rEs-X4-ljP" secondAttribute="trailing" id="EDQ-nL-WE8"/>
+                    <constraint firstAttribute="trailing" secondItem="krD-9T-4AC" secondAttribute="trailing" constant="16" id="ExD-Fh-8un"/>
+                    <constraint firstItem="rEs-X4-ljP" firstAttribute="bottom" secondItem="xYF-Y2-oS9" secondAttribute="bottom" id="IgB-so-UqO"/>
+                    <constraint firstItem="nwN-uD-d4K" firstAttribute="top" secondItem="T7L-Gm-eRF" secondAttribute="bottom" constant="7.5" id="JMM-GG-UlD"/>
+                    <constraint firstItem="T7L-Gm-eRF" firstAttribute="top" secondItem="rfi-HW-3xa" secondAttribute="bottom" constant="8" id="NzQ-hS-ZC5"/>
+                    <constraint firstItem="xYF-Y2-oS9" firstAttribute="top" secondItem="nwN-uD-d4K" secondAttribute="bottom" constant="8" id="OdP-CL-5LG"/>
+                    <constraint firstAttribute="trailing" secondItem="TYI-dT-w6A" secondAttribute="trailing" constant="50" id="QgC-TO-UYA"/>
+                    <constraint firstAttribute="trailing" secondItem="nwN-uD-d4K" secondAttribute="trailing" constant="50" id="S3Q-7V-vcY"/>
+                    <constraint firstItem="T7L-Gm-eRF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="S6r-as-Nqn"/>
+                    <constraint firstAttribute="trailing" secondItem="xYF-Y2-oS9" secondAttribute="trailing" constant="50" id="WMG-8z-QVy"/>
+                    <constraint firstItem="rEs-X4-ljP" firstAttribute="leading" secondItem="rfi-HW-3xa" secondAttribute="trailing" id="XcB-c7-ewg"/>
+                    <constraint firstAttribute="trailing" secondItem="rfi-HW-3xa" secondAttribute="trailing" constant="50" id="YR6-EU-YEb"/>
+                    <constraint firstItem="krD-9T-4AC" firstAttribute="top" secondItem="xYF-Y2-oS9" secondAttribute="bottom" constant="13" id="c5R-d2-Usm"/>
+                    <constraint firstItem="TYI-dT-w6A" firstAttribute="leading" secondItem="T7L-Gm-eRF" secondAttribute="trailing" constant="8" id="nKS-qN-uNs"/>
+                    <constraint firstItem="rfi-HW-3xa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="oPf-1S-ibU"/>
+                    <constraint firstItem="TYI-dT-w6A" firstAttribute="top" secondItem="rfi-HW-3xa" secondAttribute="bottom" constant="8" id="ufO-4k-6B2"/>
+                    <constraint firstItem="nwN-uD-d4K" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="yuP-sA-9Yl"/>
+                    <constraint firstItem="rfi-HW-3xa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="zFI-gy-7RY"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="contentLabel" destination="ner-6H-dry" id="XIg-Nx-90n"/>
+                <outlet property="commentsButtonLabel" destination="xYF-Y2-oS9" id="nMv-a9-gsR"/>
+                <outlet property="commentsTableView" destination="krD-9T-4AC" id="KwN-3d-8Fd"/>
+                <outlet property="contentLabel" destination="nwN-uD-d4K" id="weh-1j-q8D"/>
+                <outlet property="dateTimeLabel" destination="TYI-dT-w6A" id="IDH-iV-61T"/>
+                <outlet property="trackIcon" destination="rfi-HW-3xa" id="RgD-jl-BhT"/>
+                <outlet property="trackNameLabel" destination="T7L-Gm-eRF" id="nbW-dJ-Ewy"/>
             </connections>
+            <point key="canvasLocation" x="25" y="266"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="riderProfileTabBar" width="30" height="30"/>
+    </resources>
 </document>
