--- a/GoMoto/MyTracksVC/SearchTracksVC/SearchTracksVC.xib
+++ b/GoMoto/MyTracksVC/SearchTracksVC/SearchTracksVC.xib
@@ -12,6 +12,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchTracksVC" customModule="GoMoto" customModuleProvider="target">
             <connections>
+                <outlet property="searchBar" destination="2XV-vB-hkS" id="bAH-lr-wYd"/>
+                <outlet property="tableView" destination="pGr-ka-tbO" id="Qk1-m6-3xw"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -26,7 +28,7 @@
                 </tableView>
                 <searchBar contentMode="redraw" placeholder="Enter your postcode" translatesAutoresizingMaskIntoConstraints="NO" id="2XV-vB-hkS">
                     <rect key="frame" x="0.0" y="20" width="375" height="56"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                 </searchBar>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
