--- a/GoMoto/MyTracksVC/SearchTracksVC/SearchTracksCell/SearchTracksCell.xib
+++ b/GoMoto/MyTracksVC/SearchTracksVC/SearchTracksCell/SearchTracksCell.xib
@@ -25,8 +25,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="130.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Bjs-Ql-e0a">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="130.5"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Bjs-Ql-e0a">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="120.5"/>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Eez-Rz-iwU">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="25"/>
@@ -34,17 +34,17 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kcN-7T-ccq">
                                 <rect key="frame" x="137.5" y="1" width="45" height="23.5"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNw-Xo-ULK">
-                                <rect key="frame" x="278" y="4" width="34" height="19.5"/>
+                                <rect key="frame" x="278" y="3" width="34" height="19.5"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-UltraLight" family="Avenir Next" pointSize="14"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.98496952068885868" green="1" blue="0.98244120077748631" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="CNw-Xo-ULK" firstAttribute="centerY" secondItem="kcN-7T-ccq" secondAttribute="centerY" id="0oN-qz-hJT"/>
                             <constraint firstAttribute="trailing" secondItem="CNw-Xo-ULK" secondAttribute="trailing" constant="8" id="PGb-ID-mIN"/>
@@ -59,7 +59,7 @@
                     <constraint firstAttribute="trailing" secondItem="Bjs-Ql-e0a" secondAttribute="trailing" id="4a3-j7-KPQ"/>
                     <constraint firstItem="Bjs-Ql-e0a" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="ASJ-0k-4Rs"/>
                     <constraint firstItem="Eez-Rz-iwU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="D0c-8E-6Vh"/>
-                    <constraint firstAttribute="bottom" secondItem="Bjs-Ql-e0a" secondAttribute="bottom" id="DAc-BI-Bza"/>
+                    <constraint firstAttribute="bottom" secondItem="Bjs-Ql-e0a" secondAttribute="bottom" constant="10" id="DAc-BI-Bza"/>
                     <constraint firstItem="Eez-Rz-iwU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="FA5-mb-zFU"/>
                     <constraint firstItem="Bjs-Ql-e0a" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="XGh-lC-WEb"/>
                 </constraints>
