Favorite tracks logic is working

--- a/GoMoto/MyTracksVC/MyTracksListCell/MyTracksListCell.xib
+++ b/GoMoto/MyTracksVC/MyTracksListCell/MyTracksListCell.xib
@@ -25,7 +25,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="171.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8gc-Wa-3al">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8gc-Wa-3al">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="171.5"/>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aKV-ML-DUx">
